# py_oct25_fastapi

./: .env  .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 63db8d2371c4_task_project.py  7371b351952f_initial_migration.py
api/v1/: api.py  project.py  task.py
core/: __init__.py  config.py
crud/: exceptions.py  project.py  task.py  user.py
db/: __init__.py  async_session.py  session.py
models/: user.py
schemas/: project.py  task.py  user.py
